Using HashSet instead of ArrayList in a lot of places